--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_install:
   - make server.install
   - make database.init
   - make database.migrate
-  - make database.upgrade
+install:
+  - make server.d
+  - make server.stop
 script:
   - make server.test
+  - make server.flake8
