--- a/src/sw/film/GET.yml
+++ b/src/sw/film/GET.yml
@@ -4,7 +4,7 @@ parameters:
   - id: id
     in: path
     type: string
-    description: the id of the film
+    description: The id of the film
 responses:
   200:
     description: Film's information was succesfully delivered
