--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 Flask-Script==2.0.6
 Flask==1.0.3
+Flask-Cors
 SQLAlchemy==1.3.4
 Werkzeug==0.15.4
 alembic==1.0.10
